# nexus

./: .gitmodules  AISovereignVault (1).sol  AISovereignVault.sol  CMakeCache.txt  CMakeLists.txt  Makefile  NexusTokenRegistry.sol  SovereignVault.sol  agave-3.1.14.csv  broadcaster.cpp  cmake_install.cmake  dependencies.cmake  ingestion.cpp  manifest.xml  merkle-anchor.h
.github/actions/build-wallet-core/: action.yml
.github/workflows/: build-nexus.yml  deploy.yml  nexus-build.yml
legacy/trust-wallet-android-source/: apply-proxy-patch.sh  audit_meta.txt  legacy_endpoints.txt  proxy-map.conf
legacy/trust-wallet-android-source/app/src/main/java/com/wallet/crypto/trustapp/repository/: EthereumNetworkRepository.java
legacy/trust-wallet-android-source/app/src/main/java/com/wallet/crypto/trustapp/service/: CoinmarketcapTickerService.java  EthplorerTokenService.java
